<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    tools:context=".Profile">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="Account Information"
            android:textColor="@color/brown"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Username" />


            <EditText
                android:id="@+id/pro_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rounded"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/edittext_hint1"
                android:padding="10dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Email Address" />


            <EditText
                android:id="@+id/pro_name3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rounded"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/edittext_hint2"
                android:padding="10dp"

                />
        </LinearLayout>
        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="60dp"-->
        <!--            android:orientation="horizontal">-->

        <!--            <TextView-->
        <!--                android:id="@+id/textView13"-->
        <!--                android:layout_width="140dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="Password" />-->


        <!--            <EditText-->
        <!--                android:id="@+id/pro_name1"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:hint="@string/edittext_hint3"-->
        <!--                android:padding="10dp"-->
        <!--                android:ellipsize="start"-->
        <!--                android:gravity="center_horizontal"-->
        <!--                android:layout_marginHorizontal="20dp"-->
        <!--                android:background="@drawable/rounded"-->

        <!--                />-->
        <!--        </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Linked Bank Account" />


            <EditText
                android:id="@+id/pro_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rounded"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/edittext_hint4"
                android:padding="10dp"

                />
        </LinearLayout>


        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/brown"
            android:text="@string/pass" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/brown"
            android:text="@string/addbank" />


        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/brown"
            android:text="@string/removelinked" />

        <Button
            android:id="@+id/closeButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/brown"
            android:text="Close" />


    </LinearLayout>


</FrameLayout>